--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#aboutMe" class="nav__link">About Me</a></li>
+                    <li class="nav__item"><a href="#AboutMe" class="nav__link">About Me</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                     <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                     <li class="nav__item"><a href="#experience" class="nav__link">Experience</a></li>
@@ -33,8 +33,8 @@
             </nav>
         </header>
         
-        <!-- Introduction/About me -->
-        <section class="intro" id="aboutMe">
+        <!-- Introduction -->
+        <section class="intro">
             <h1 class="section__title section__title--intro">
                 Hello, I am <strong>Montero Davis</strong>
             </h1>
@@ -43,43 +43,42 @@
             <img src="img/pexels-gabriel-albino-de-jesus-8473286.jpg" alt="A picture of a laptop and a book on a bed" class="intro__img">
         </section>
 
+        <!-- About Me -->
+        <section class="aboutMe" id="AboutMe">
+            <h2 class="section__title section__title--aboutMe">About Me</h2>
+            <p class="section__subtitle section__subtitle--aboutMe">Aspiring Web Developer</p>
+
+            <div class="aboutMe__body">
+                <p>An aspiring web developer who's interested in using different tech stacks for web development</p>
+                <p>Currently looking for an internship</p>
+            </div>
+
+            <!-- Photo by Cup of  Couple: https://www.pexels.com/photo/textbook-and-laptop-placed-on-bed-near-tray-with-coffee-set-6177658/ -->
+            <img src="img/pexels-cup-of-couple-6177658.jpg" alt="A vertical image of textbook and laptop placed on bed near tray with coffee set" class="aboutMe__img">
+        </section>
+
         <!-- Skills -->
         <section class="my-skills" id="skills">
             <h2 class="section__title section__title--skills">My Skills</h2>
             <div class="skills">
                 <div class="skill">
-                    <i class="fa-brands fa-html5 fa-2xl skills__img"></i>
+                    <i class="fa-brands fa-html5 skills__img"></i>
                     <h3>Front End Languages</h3>
                     <p>HTML, CSS</p>
                 </div> <!-- / skill -->
 
                 <div class="skill">
-                    <i class="fa-brands fa-figma fa-2xl skills__img"></i>
+                    <i class="fa-brands fa-figma skills__img"></i>
                     <h3>UI/UX Design</h3>
                     <p>Figma</p>
                 </div> <!-- / skill -->
 
                 <div class="skill">
-                    <i class="fa-brands fa-python fa-2xl skills__img"></i>
+                    <i class="fa-brands fa-python skills__img"></i>
                     <h3>Programming Languages</h3>
                     <p>Python, C, Java, JavaScript, SQL</p>
                 </div> <!-- / skill -->
             </div> <!-- / skills -->
-        </section>
-
-        <!-- Projects -->
-        <section class="projects" id="projects">
-            <h2 class="section__title section__title--projects">My Projects</h2>
-            <p class="section__subtitle section__subtitle--projects">Here are the projects I have done</p>
-
-            <div class="projects__body">
-                <p></p>
-                <p></p>
-            </div>
-
-            <!-- Photo by Cup of  Couple: https://www.pexels.com/photo/textbook-and-laptop-placed-on-bed-near-tray-with-coffee-set-6177658/ -->
-            <img src="img/pexels-cup-of-couple-6177658.jpg" alt="A vertical image of textbook and laptop placed on bed near tray with coffee set" class="projects__img">
-            <a href="#" class="btn">My Projects</a>
         </section>
 
         <!-- My Experience -->
@@ -104,6 +103,7 @@
                     <img src="" alt="" class="">
                 </a>
             </div>
+            <a href="#" class="btn">My Projects</a>
         </section>
 
         <!-- Footer -->
