--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <img src="img/pexels-gabriel-albino-de-jesus-8473286.jpg" alt="A picture of a laptop and a book on a bed" class="intro__img">
         </section>
 
+        <!-- Cursor -->
+        <div class="inner-cursor"></div>
+        <div class="outer-cursor"></div>
+
         <!-- About Me -->
         <section class="aboutMe" id="AboutMe">
             <h2 class="section__title section__title--aboutMe">About Me</h2>
