--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Montero's Portfolio Website</title>
+        <link rel="icon" type="image/x-icon" href="../img/m-solid.svg">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
