Input personal details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Montero's Portfolio Website</title>
+        <title>Misaki's Portfolio Website</title>
         <link rel="icon" type="image/x-icon" href="../img/m-solid.svg">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,10 +26,10 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#AboutMe" class="nav__link">About Me</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                    <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
-                    <li class="nav__item"><a href="#experience" class="nav__link">Experience</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Resume</a></li>
+                    <li class="nav__item"><a href="#experience" class="nav__link">My Experience</a></li>
+                    <li class="nav__item"><a href="#organisations" class="nav__link">My Organisations</a></li>
+                    <li class="nav__item"><a href="#experience" class="nav__link">My Projects</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">My Skills</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,11 +37,10 @@
         <!-- Introduction -->
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                Hello, I am <strong>Montero Davis</strong>
+                Hello, I am <strong>Misaki Michiba</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Computer Science Student</p>
-            <!-- Photo by Gabriel Albino De Jesus: https://www.pexels.com/photo/book-beside-a-laptop-8473286/ -->
-            <img src="img/pexels-gabriel-albino-de-jesus-8473286.jpg" alt="A picture of a laptop and a book on a bed" class="intro__img">
+            <img src="img/misakimichiba.jpg" alt="A picture of me" class="intro__img">
         </section>
 
         <!-- Cursor -->
@@ -54,39 +53,81 @@
             <p class="section__subtitle section__subtitle--aboutMe">Aspiring Web Developer</p>
 
             <div class="aboutMe__body">
-                <p>An aspiring web developer who's interested in using different tech stacks for web development</p>
-                <p>Currently looking for an internship</p>
+                <p>A computer science student interested in web development, full stack development, UI/UX design and mobile development</p>
+                <h3>Currently looking for an internship in tech</h3>
+                <p>Duration: Jan 2024 - April 2024</p>
+                <a href="#" style="background-color: var(--clr-dark); color: var(--clr-light);" class="btn">My Resume</a>
             </div>
 
             <!-- Photo by Cup of  Couple: https://www.pexels.com/photo/textbook-and-laptop-placed-on-bed-near-tray-with-coffee-set-6177658/ -->
             <img src="img/pexels-cup-of-couple-6177658.jpg" alt="A vertical image of textbook and laptop placed on bed near tray with coffee set" class="aboutMe__img">
         </section>
 
-        <!-- Skills -->
-        <section class="my-skills" id="skills">
-            <h2 class="section__title section__title--skills">My Skills</h2>
-            <div class="skills">
-                <div class="skill">
-                    <i class="fa-brands fa-html5 skills__img"></i>
-                    <h3>Front End Languages</h3>
-                    <p>HTML, CSS</p>
-                </div> <!-- / skill -->
+        <!-- experience -->
+        <section class="my-experience" id="experience">
+            <h2 class="section__title section__title--experience">My Experience</h2>
+            <div class="experiences">
+                <div class="experience">
+                    <img src="img/eduspec_logo.png" alt="Sunway XFarms Logo" class="experience__img"></i>
+                    <h3>IT Intern</h3>
+                    <p>May - July 2020</p>
+                    <a href="" class="btn">Details</a>
+                </div> <!-- / experience -->
 
-                <div class="skill">
-                    <i class="fa-brands fa-figma skills__img"></i>
-                    <h3>UI/UX Design</h3>
-                    <p>Figma</p>
-                </div> <!-- / skill -->
+                <div class="experience">
+                    <img src="img/Kitahack2023.png" alt="KitaHack 2023 Logo" class="experience__img"></i>
+                    <h3>Publicity Committee</h3>
+                    <p>December 2022 - March 2023</p>
+                    <a href="https://www.linkedin.com/posts/misaki-michiba-0683311a0_i-recently-had-the-pleasure-of-attending-activity-7046709917696589825-g2k3?utm_source=share&utm_medium=member_desktop" class="btn" target="_blank">Details</a>
+                </div> <!-- / experience -->
 
-                <div class="skill">
-                    <i class="fa-brands fa-python skills__img"></i>
-                    <h3>Programming Languages</h3>
-                    <p>Python, C, Java, JavaScript, SQL</p>
-                </div> <!-- / skill -->
-            </div> <!-- / skills -->
+                <div class="experience">
+                    <img src="img/XFarms-logo.png" alt="Sunway XFarms Logo" class="experience__img"></i>
+                    <h3>Agrifood Apprentice</h3>
+                    <p>January - March 2023</p>
+                    <a href="https://www.linkedin.com/posts/misaki-michiba-0683311a0_i-am-excited-to-announce-that-i-have-successfully-activity-7049000609886195712-bGm2?utm_source=share&utm_medium=member_desktop" class="btn" target="_blank">Details</a>
+                </div> <!-- / experience -->
+
+                <div class="experience">
+                    <img src="img/kitahack2024.png" alt="KitaHack 2024 Logo" class="experience__img"></i>
+                    <h3>Head of Publicity</h3>
+                    <p>Present</p>
+                    <a href="" class="btn">Details</a>
+                </div> <!-- / experience -->
+            </div> <!-- / experience -->
         </section>
 
-        <!-- My Experience -->
+        <!-- organisation -->
+        <section class="my-experience" id="organisations" style="background-color: var(--clr-light); color: var(--clr-dark)">
+            <h2 class="section__title section__title--experience" style="color: var(--clr-dark);">My Organisations</h2>
+            <div class="experiences">
+                <div class="experience">
+                    <img src="img/GDSC Sunway University Logo.png" alt="KitaHack 2023 Logo" class="experience__img"></i>
+                    <h3>GDSC Sunway University Lead</h3>
+                    <p>Present</p>
+                    <a href="https://gdsc.community.dev/sunway-university/" class="btn" target="_blank">Details</a>
+                </div> <!-- / experience -->
+
+                <div class="experience">
+                    <img src="img/stc-logo-text-vertical.png" alt="Sunway XFarms Logo" class="experience__img"></i>
+                    <h3>Head of Education</h3>
+                    <p>Present</p>
+                    <a href="https://www.linkedin.com/posts/misaki-michiba-0683311a0_i-am-excited-to-announce-that-i-have-successfully-activity-7049000609886195712-bGm2?utm_source=share&utm_medium=member_desktop" class="btn" target="_blank">Details</a>
+                </div> <!-- / experience -->
+
+                <div class="experience">
+                    <img src="img/itsc_logo.png" alt="KitaHack 2024 Logo" class="experience__img"></i>
+                    <h3>President</h3>
+                    <p>January - December 2020</p>
+                    <a href="" class="btn">Details</a>
+                </div> <!-- / experience -->
+            </div> <!-- / experience -->
+        </section>
+
+
+        <!-- 
+            
+            
         <section class="" id="experience">
             <h2 class="section__title">My Experience</h2>
             <p class="section__subtitle"></p>
@@ -111,23 +152,20 @@
             <a href="#" class="btn">My Projects</a>
         </section>
 
+        -->
+
         <!-- Footer -->
         <footer class="footer">
-            <a href="mailto:montero@notrealmail.com" class="footer__link">montero@notrealmail.com</a>
+            <a href="mailto:misakimichiba@gmail.com" target="_blank" class="footer__link">Click to email me!</a>
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a class="social-list__link" href="#">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/misaki-michiba-0683311a0/" target="_blank">
                         <i class="fa-brands fa-linkedin fa-2xl"></i>
                     </a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link" href="#">
+                    <a class="social-list__link" href="https://github.com/misakimichiba"  target="_blank">
                         <i class="fa-brands fa-github fa-2xl"></i>
-                    </a>
-                </li>
-                <li class="social-list__item">
-                    <a class="social-list__link" href="#">
-                        <i class="fa-brands fa-codepen fa-2xl"></i>
                     </a>
                 </li>
             </ul>
