Added skills section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                     <li class="nav__item"><a href="#AboutMe" class="nav__link">About Me</a></li>
                     <li class="nav__item"><a href="#experience" class="nav__link">My Experience</a></li>
                     <li class="nav__item"><a href="#organisations" class="nav__link">My Organisations</a></li>
-                    <li class="nav__item"><a href="#experience" class="nav__link">My Projects</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">My Skills</a></li>
+                    <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
                 </ul>
             </nav>
         </header>
@@ -53,9 +52,9 @@
             <p class="section__subtitle section__subtitle--aboutMe">Aspiring Web Developer</p>
 
             <div class="aboutMe__body">
-                <p>A computer science student interested in web development, full stack development, UI/UX design and mobile development</p>
+                <p>A final year computer science degree student interested in web development, full stack development, UI/UX design and mobile development</p>
                 <h3>Currently looking for an internship in tech</h3>
-                <p>Duration: Jan 2024 - April 2024</p>
+                <p>Duration: Jan 2024 - April 2024 (3 Months)</p>
                 <a href="#" style="background-color: var(--clr-dark); color: var(--clr-light);" class="btn">My Resume</a>
             </div>
 
@@ -103,7 +102,8 @@
             <div class="experiences">
                 <div class="experience">
                     <img src="img/GDSC Sunway University Logo.png" alt="KitaHack 2023 Logo" class="experience__img"></i>
-                    <h3>GDSC Sunway University Lead</h3>
+                    <h3>GDSC Sunway University</h3>
+                    <h3>Lead</h3>
                     <p>Present</p>
                     <a href="https://gdsc.community.dev/sunway-university/" class="btn" target="_blank">Details</a>
                 </div> <!-- / experience -->
@@ -112,7 +112,7 @@
                     <img src="img/stc-logo-text-vertical.png" alt="Sunway XFarms Logo" class="experience__img"></i>
                     <h3>Head of Education</h3>
                     <p>Present</p>
-                    <a href="https://www.linkedin.com/posts/misaki-michiba-0683311a0_i-am-excited-to-announce-that-i-have-successfully-activity-7049000609886195712-bGm2?utm_source=share&utm_medium=member_desktop" class="btn" target="_blank">Details</a>
+                    <a href="https://www.linkedin.com/feed/update/urn:li:activity:7074295540674428928?utm_source=share&utm_medium=member_desktop" class="btn" target="_blank">Details</a>
                 </div> <!-- / experience -->
 
                 <div class="experience">
@@ -124,35 +124,60 @@
             </div> <!-- / experience -->
         </section>
 
+        <!-- My Skills -->
+        <section class="my-skills" id="skills">
+            <h2 class="section__title section__title--skills">My Skills</h2>
 
-        <!-- 
-            
-            
-        <section class="" id="experience">
-            <h2 class="section__title">My Experience</h2>
-            <p class="section__subtitle"></p>
+            <div class="portfolio">
+                <!-- Portfolio Skill #1 -->
+                <div class="portfolio__item">
+                    <img src="img/1024px-Python_icon_(black_and_white).svg.png" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">Python</a>
+                </div>
 
-            <div class="experiences">
-                <a href="#" class="experience__item">
-                    <img src="" alt="" class="">
-                </a>
-            </div>
+                <!-- Portfolio Skill #2 -->
+                <div class="portfolio__item">
+                    <img src="img/java.png" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">Java</a>
+                </div>
 
-            <div class="experiences">
-                <a href="#" class="experience__item">
-                    <img src="" alt="" class="">
-                </a>
-            </div>
+                <!-- Portfolio Skill #4 -->
+                <div class="portfolio__item">
+                    <img src="img/logo-javascript-svgrepo-com.svg" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">JavaScript</a>
+                </div>
 
-            <div class="experiences">
-                <a href="#" class="experience__item">
-                    <img src="" alt="" class="">
-                </a>
-            </div>
-            <a href="#" class="btn">My Projects</a>
+                <!-- Portfolio Skill #3 -->
+                <div class="portfolio__item">
+                    <img src="img/web-development-svgrepo-com.svg" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">Web Development</a>
+                </div>
+
+                <!-- Portfolio Skill #4 -->
+                <div class="portfolio__item">
+                    <img src="img/sql-file-format-symbol-svgrepo-com.svg" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">SQL</a>
+                </div>
+
+                <!-- Portfolio Skill #4 -->
+                <div class="portfolio__item">
+                    <img src="img/cube-svgrepo-com.svg" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">3D Modelling</a>
+                </div>
+
+                <!-- Portfolio Skill #5 -->
+                <div class="portfolio__item">
+                    <img src="img/design-page-svgrepo-com.svg" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">UI/UX Design</a>
+                </div>
+
+                <!-- Portfolio Skill #6 -->
+                <div class="portfolio__item">
+                    <img src="img/design-svgrepo-com.svg" alt="" class="portfolio__img">
+                    <a href="" class="portfolio__btn">Art and Design</a>
+                </div>
+            </div>            
         </section>
-
-        -->
 
         <!-- Footer -->
         <footer class="footer">
