Added resume link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <p>A final year computer science degree student interested in web development, full stack development, UI/UX design and mobile development</p>
                 <h3>Currently looking for an internship in tech</h3>
                 <p>Duration: Jan 2024 - April 2024 (3 Months)</p>
-                <a href="#" style="background-color: var(--clr-dark); color: var(--clr-light);" class="btn">My Resume</a>
+                <a href="https://drive.google.com/file/d/1x_RUWWg_1_LuTFM_o7dAkCUgSwJTd2Ng/view?usp=sharing" style="background-color: var(--clr-dark); color: var(--clr-light);" class="btn">My Resume</a>
             </div>
 
             <!-- Photo by Cup of  Couple: https://www.pexels.com/photo/textbook-and-laptop-placed-on-bed-near-tray-with-coffee-set-6177658/ -->
