--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <!-- Portfolio Skill #3 -->
                 <div class="portfolio__item">
                     <img src="img/web-development-svgrepo-com.svg" alt="" class="portfolio__img">
-                    <a href="" class="portfolio__btn">Web Development</a>
+                    <a href="web_development.html" class="portfolio__btn">Web Development</a>
                 </div>
 
                 <!-- Portfolio Skill #4 -->
