Added custom cursor to web_dev page

--- a/web_development.html
+++ b/web_development.html
@@ -22,6 +22,11 @@
                 <i class="fa-solid fa-m fa-2xl"></i>
             </div>
         </header>
+
+        <!-- Cursor -->
+        <div class="inner-cursor"></div>
+        <div class="outer-cursor"></div>
+
         <div class="">
             <ul class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
@@ -41,7 +46,7 @@
             </div>            
         </section>
         
-
+        <script src="js/index.js"></script>
     </body>
 
 </html>
