Added Art and Design page

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <!-- Portfolio Skill #6 -->
                 <div class="portfolio__item">
                     <img src="img/design-svgrepo-com.svg" alt="" class="portfolio__img">
-                    <a href="" class="portfolio__btn">Art and Design</a>
+                    <a href="art_design.html" class="portfolio__btn">Art and Design</a>
                 </div>
             </div>            
         </section>
