--- a/web_development.html
+++ b/web_development.html
@@ -45,6 +45,23 @@
                 </div>
             </div>            
         </section>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <a href="mailto:misakimichiba@gmail.com" target="_blank" class="footer__link">Click to email me!</a>
+            <ul class="social-list">
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/misaki-michiba-0683311a0/" target="_blank">
+                        <i class="fa-brands fa-linkedin fa-2xl"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://github.com/misakimichiba"  target="_blank">
+                        <i class="fa-brands fa-github fa-2xl"></i>
+                    </a>
+                </li>
+            </ul>
+        </footer>
         
         <script src="js/index.js"></script>
     </body>
