--- a/art_design.html
+++ b/art_design.html
@@ -42,6 +42,7 @@
                     <h2 class="section__title section__title--skills">
                         Designs made for Kitahack 2023
                     </h2>
+                    <p>Made with Adobe Illustrator and Canva</p>
                     <img src="img/KitaHack Event Banner.png" alt="Banner for KitaHack 2023" class="portfolio__img">
                     <img src="img/NormalBunting.png" alt="KitaHack 2023 bunting" class="art_img">
                 </div>
@@ -50,6 +51,7 @@
                     <h2 class="section__title section__title--skills" style="color: var(--clr-light);">
                         Designs made for Club Events
                     </h2>
+                    <p style="color: var(--clr-light);">Made with Medibang, Adobe Illustrator and Canva</p>
                     <img src="img/Esports Event.png" alt="Poster of esports event" class="art_img">
                     <img src="img/esports_progress.JPG" alt="Esports poster progress shot" class="art_img">
                     <img src="img/CV Workshop Poster.png" alt="Poster of CV workshop" class="art_img">
@@ -61,6 +63,7 @@
                     <h2 class="section__title section__title--skills">
                         Hobby Art
                     </h2>
+                    <p>A few examples of the pencil sketches I made during my free time, reference pictures were from Line of Action</p>
                     <img src="img/womanDrawing.jpg" alt="Sketch of a woman" class="art_img">
                     <img src="img/manDrawing.jpg" alt="Sketch of a man" class="art_img">
                     <img src="img/bodySketch.jpg" alt="Body sketch of a man" class="art_img">
