--- a/art_design.html
+++ b/art_design.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Misaki's Portfolio Website - Web Development</title>
+        <title>Misaki's Portfolio Website - Art and Design</title>
         <link rel="icon" type="image/x-icon" href="../img/m-solid.svg">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
