--- a/Pizzaology/menu.html
+++ b/Pizzaology/menu.html
@@ -20,19 +20,14 @@
   <header>
     <!-- navbar  -->
     <nav class="navbar navbar-expand-lg px-4">
-      <h2>Pizzaology</h2>
         <ul class="navbar-nav mx-auto text-capitalize StaatlichesHeading">
           <li class="nav-item active">
-            <a class="nav-link" href="#" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#" >Special Offers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" >Locations</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" >Contact Us</a>
           </li>
         </ul>
           <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between hell">
@@ -43,9 +38,8 @@
     <!-- end of nav -->
 
     <div class="container-fluid">
-      <div class="row max-height justify-content-center align-items-center">
+      <div class="row justify-content-center align-items-center">
         <div class="col-10 mx-auto banner text-center">
-          <h1 class="StaatlichesBigHeading">Welcome to <span class="piz">Pizzaology's</span> Menu</h1>
           <div id="cart" class="cart montserrat">
             <!-- cart total -->
             <div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
